--- a/src/style.css
+++ b/src/style.css
@@ -1,67 +1,88 @@
-/* LetrasEnLinea.com*/
-body{
-  background: #709AA4;
+HTML {
+  height: 100%;
+  font-family: 'Lora', serif;
+  }
+
+BODY {
+  background: radial-gradient(4rem,
+    rgba(255,255,255,0) 80%,
+    #778691 80%, #778691 99%,
+    rgba(255,255,255, 0)
+    ) 0 0,
+    radial-gradient(4rem,
+    rgba(255,255,255,0) 80%,
+    #778691 80%, #778691 99%,
+    rgba(255,255,255, 0)
+    ) 4em 4em,
+    radial-gradient(4.7rem,
+    rgba(255,255,255,0) 50%,
+    #B1C2B3 50%,
+    #B1C2B3 75%, #B1C2B3 99%,
+    rgba(255,255,255, 0)
+    ) 4em 4em,
+    radial-gradient(4.7rem,
+    rgba(255,255,255,0) 50%,
+    #B1C2B3 50%,
+    #F5FCD0 75%, #B1C2B3 99%,
+    rgba(255,255,255, 0)
+    ) 0 0;
+  background-size: 8rem 8rem;
+  background-color: #F5FCD0;
+  }
+
+
+.titulo{
+  color: #FFFFFF;
 }
 
-h1 {
-  height: 60px;
-  background: #709AA4;
+.validatorTitle{
+  border: 1px solid #000000;
+  background: #649BAC
 }
 
-h4 {
-  height: 60px;
+.container > div {
+  display: block;
+  padding: 20px;
+  color: #000000;
+  background: #7AB3C6;
+  box-shadow: 2px 2px 10px rgba(0,0,0,.25);
 }
 
-#cardInformation{
-background: #7AC1EA;
-border: 1px solid #000000;
-width: 400px;
-height: 300px;
-
-}
-
-#cardValida{
-background: #FFFFFF;
-}
-
-#cardInvalida{
-background: #FFFFFF;
-}
-
-#rValida{
-background: #93D9B3;
-border: 1px solid #253C2F;
-width: 400px;
-height: 100px
-}
-
-#rInvalida{
-background: #BE9292;
-border: 1px solid #253C2F;
-width: 400px;
-height: 100px
-}
-
-#tValida{
-height: 30px;
-}
-
-#tInvalida{
-height: 30px;
+.container{
+  border: 1px solid #000000;
+  display: grid;
+  grid-template-columns:1fr 1fr;
+  grid-template-rows: 1fr;
 }
 
 input{
-  background: #D2D9DD;
-  border:2px solid #000000;
-  height: 25px;
-  width: 210px;
+
+  font-size: 16px;
+  width: 13em;
+  padding: 0.3em 0.5em;
 }
 
+
 button{
-  width: 150px;
-  height: 32px;
-  background: #E9F841;
-  border: 2px solid #000000;
-  box-sizing: border-box;
-  border-radius: 18px;
+border: 2px inset #51899B;
+font-size: 17px;
+padding: 0.5em 1em;
+font-family: 'Lora', serif;
+background: #F0E68C;
+box-sizing: border-box;
+border-radius: 18px;
+}
+
+
+.answer{
+  background: #7AB3C6;
+
+}
+
+.footer{
+ border: 0.1px solid #000000;
+ background: #51899B;
+ font-size: 12px;
+
+
 }
