Pruebas unitarias al 100%

--- a/src/style.css
+++ b/src/style.css
@@ -74,9 +74,12 @@ border-radius: 18px;
 }
 
 
-.answer{
-  background: #7AB3C6;
+#validAnswer{
+  background: #7AB3C6
+}
 
+.ocultar{
+  display: none;
 }
 
 .footer{
