--- a/src/style.css
+++ b/src/style.css
@@ -31,35 +31,135 @@ BODY {
   }
 
 
-.titulo{
-  color: #FFFFFF;
+.logo{
+  border-radius: 20px;
+  padding: 5px;
 }
 
-.validatorTitle{
+
+/*homePage*/
+.item {
+  border-radius: 5px;
+  padding: 18px;
+  background: #f2f2f2;
+}
+
+.item img{
+  max-width: 100%
+}
+
+.containerHome{
+  display: grid;
+  grid-template-columns: repeat(auto-fill,250px);
+  grid-gap: 5px;
+  justify-content: center;
+}
+
+
+/*bookDetail*/
+.containerDetail{
+  display: grid;
+  width: 70%;
+  grid-template-columns:1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-gap: 5px;
+  max-width: 1000px;
+  margin: 1.3em auto;
+  justify-content: center;
+}
+
+.containerDetail .detail{
+  grid-column: 1/3;
+  border-radius: 5px;
+  padding: 18px;
+  background: #f2f2f2;
+}
+
+#bookprice{
+  height: 350px;
+  border: 1px solid #000000;
+  border-radius: 18px;
+}
+
+.books {
+  align:center;
+  border-radius: 5px;
+  padding: 18px;
+  background: #f2f2f2;
+
+}
+#price{
+  font-size: 50px;
+}
+
+.detail{
+  height: auto;
+  border-radius: 5px;
+  padding: 18px;
+  background: #f2f2f2;
+}
+
+.books img{
+  max-width: 100%
+}
+
+/*pageValidateCard*/
+.container .validatorTitle{
+  grid-column: 1/3;
+  height: 28px;
   border: 1px solid #000000;
   background: #649BAC
 }
 
+.titulo{
+  color: #FFFFFF;
+}
+
 .container > div {
   display: block;
-  padding: 20px;
-  color: #000000;
-  background: #7AB3C6;
+  padding: 15px;
   box-shadow: 2px 2px 10px rgba(0,0,0,.25);
 }
 
+
 .container{
+  border-radius: 20px;
+  background: #FFFFFF;
   border: 1px solid #000000;
+
+  width: 90%;
+  max-width: 1000px;
+  margin: 1.6em auto;
+
   display: grid;
+  gap: 0.1em;
   grid-template-columns:1fr 1fr;
   grid-template-rows: 1fr;
 }
 
-input{
+/*ocultar contenedores*/
+.hideAnswer{
+  display: none;
+}
 
+
+.text{
   font-size: 16px;
   width: 13em;
   padding: 0.3em 0.5em;
+  border-radius: 18px;
+}
+
+
+#alerta{
+  color: #FF0F00;
+}
+
+#securityCode{
+  font-size: 16px;
+  width: 4em;
+  padding: 0.3em 0.5em;
+  border-radius: 18px;
 }
 
 
@@ -71,21 +171,59 @@ font-family: 'Lora', serif;
 background: #F0E68C;
 box-sizing: border-box;
 border-radius: 18px;
+
 }
 
+/*resulPage*/
+.containerResult .answer{
+  height: 300px;
+  background: #f2f2f2;
+  border-radius: 25px;
+}
+
+
+.containerResult{
+  width: 45%;
+  max-width: 1000px;
+  margin: 5em auto;
+}
+
+
+.ima{
+  height: 100px;
+  width:100px;
+  padding: 1em ;
+}
 
 #validAnswer{
-  background: #7AB3C6
+  background: #FFFFFF;
+  border: 1px solid #000000;
 }
 
-.ocultar{
-  display: none;
+#invalidAnswer{
+  background: #FFFFFF;
+  border: 1px solid #000000;
 }
+
+.messageValid{
+  color: #397B33;
+  font-size: 20px;
+}
+
+.messageInvalid{
+  color: #FF0000;
+  font-size: 20px;
+}
+
+.result{
+  font-size: 20px;
+}
+
 
 .footer{
+ height: 3em;
  border: 0.1px solid #000000;
  background: #51899B;
  font-size: 12px;
-
-
+ color: #FFFFFF
 }
